[gd_scene load_steps=3 format=3 uid="uid://b0look7hupshh"]

[ext_resource type="Script" path="res://entities/stats/stats.gd" id="1_0668p"]
[ext_resource type="PackedScene" uid="uid://csusmptumx1mq" path="res://entities/stats/Modifier.tscn" id="2_6p6ak"]

[node name="Stats" type="Node2D" groups=["Persist"]]
script = ExtResource("1_0668p")

[node name="EnergyRegen" type="Timer" parent="."]
one_shot = true

[node name="LifeRegen" type="Timer" parent="."]
one_shot = true

[node name="Modifier" parent="." instance=ExtResource("2_6p6ak")]

[connection signal="timeout" from="EnergyRegen" to="." method="_on_energy_regen_timeout"]
[connection signal="timeout" from="LifeRegen" to="." method="_on_life_regen_timeout"]
